@@ -1,4 +1,13 @@
-2008-09-01  Nicolas Bruguier  <gandalfn@rohan>
+2008-09-03  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+	* plugins/mosaic/ccm-mosaic.c (ccm_mosaic_on_key_press),
+	(ccm_mosaic_get_damaged_area), (ccm_mosaic_paint_area),
+	(ccm_mosaic_screen_paint):
+	  - Improve redraw (work in progress)
+	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_bind):
+	  - Improve redraw (work in progress)
+
+2008-09-01  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
 	* plugins/magnifier/ccm-magnifier.c
 	(ccm_magnifier_cursor_convert_to_rgba): Fix mouse image conversion.
